--- a/public/views/tasks.html
+++ b/public/views/tasks.html
@@ -1,18 +1,18 @@
-<h4>Book Service</h4>
-<div class="search_book_title_container">
+<h4>New Task</h4>
+<!-- <div class="search_book_title_container">
   <label for="search_book_title">Search Book Title:
   </label>
   <input type="text" id="search_book_title" ng-model="searchBookFilter">
 </div>
-
+ -->
   <ul class="books">
-    <li ng-repeat="book in BookService.books | filter:book.title=searchBookFilter | orderBy:'title'">
-      <h4 class="book_title">{{ book.title }}</h4>
-      <p class"book_author">{{ book.author }}</p>
+    <li ng-repeat="task in TaskService.tasks | filter:task.title=searchtaskFilter | orderBy:'title'">
+      <h4 class="task_title">{{ task.title }}</h4>
+      <p class"task_author">{{ task.author }}</p>
     </li>
   </ul>
 
-<fieldset>
+<!-- <fieldset>
   <div class="new_book_title">
     <label for="new_book_title">Title</label>
     <input id="new_book_title" type="text" ng-model="new_book.title" />
@@ -24,4 +24,4 @@
   <div class="commit">
     <button type="button" ng-click="BookService.addBook(new_book); new_book = null;">Add Book</button>
   </div>
-</fieldset>
+</fieldset> -->
