Able to add new taks and render all tasks in default view

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,1 +1,22 @@
 <h1>YES WE CANBAN</h1>
+
+<div class="taskColumn">
+  <div class="col-title">TO DO</div>
+    <ul class="books">
+    <li ng-repeat="task in TaskService.tasks | filter:task.title=searchtaskFilter | orderBy:'title'">
+      <h4 class="new_task_title">{{ task.title }}</h4>
+      <p class"new_task_desc">{{ task.desc }}</p>
+      <p class"new_task_priority">{{ task.priority }}</p>
+      <p class"new_task_createdBy">{{ task.createdBy }}</p>
+      <p class"new_task_assignedTo">{{ task.assignedTo }}</p>
+    </li>
+  </ul>
+</div>
+
+<div class="taskColumn">
+  <div class="col-title">IN PROGRESS</div>
+</div>
+
+<div class="taskColumn">
+  <div class="col-title">DONE</div>
+</div>
