--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,14 @@ body {
   border: 1px solid white;
   float: left;
   margin: 10px;
-  text-align: center;
 }
 
+.col-title {
+  background-color: black;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  line-height: 40px;
+  width: 100%;
+  height: 40px;
+}
