--- a/public/views/tasks.html
+++ b/public/views/tasks.html
@@ -33,6 +33,6 @@
   </div>
 
   <div class="commit">
-    <button type="button" ng-click="TaskService.addTask(new_task); new_task = null;">Add Task</button>
+    <button type="button" ng-click="TaskService.addToDoTask(new_task); new_task = null;">Add Task</button>
   </div>
 </fieldset>
