--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: gray;
 }
@@ -27,4 +31,15 @@ body {
   line-height: 40px;
   width: 100%;
   height: 40px;
+}
+
+.singleTask {
+  border: 1px solid white;
+  margin: 15px;
+}
+
+.singleTask:hover {
+  -webkit-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
+  box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
 }
