--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,16 +1,21 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+
+}
 
 body {
   background-color: gray;
-  margin: 0px; }
+  margin: 0px;
+}
 
 #main {
-  margin: auto; }
+  margin: auto;
+}
 
 #newTask {
   border: 1px solid white;
-  width: 100%; }
+  width: 100%;
+}
 
 .taskColumn {
   width: 31%;
@@ -18,7 +23,8 @@ body {
   height: 100%;
   border: 1px solid white;
   float: left;
-  margin: 10px; }
+  margin: 10px;
+}
 
 .col-title {
   background-color: black;
@@ -27,13 +33,16 @@ body {
   font-size: 20px;
   line-height: 40px;
   width: 100%;
-  height: 40px; }
+  height: 40px;
+}
 
 .singleTask {
   border: 1px solid white;
-  margin: 15px; }
+  margin: 15px;
+}
 
 .singleTask:hover {
-  -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
-  box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
+  -webkit-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
+  box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
+}
