--- a/public/views/default.html
+++ b/public/views/default.html
@@ -2,39 +2,39 @@
 
 <div class="taskColumn">
   <div class="col-title">TO DO</div>
-    <ul class="singleTask">
-    <li ng-click="MoveTask(task)" ng-repeat="task in TaskService.toDo | filter:task.status=1 | orderBy:'title'">
+    <div class="singleTask" ng-click="MoveTaskInProgress(task)" ng-repeat="task in TaskService.toDo | filter:task.status='__status__toDo__'">
       <h4 class="new_task_title">{{ task.title }}</h4>
       <p class"new_task_desc">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority">{{ "PRIORITY: " + task.priority }}</p>
       <p class"new_task_createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
       <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-    </li>
-  </ul>
+      <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
+
+  </div>
 </div>
 
 <div class="taskColumn">
   <div class="col-title">IN PROGRESS</div>
-    <ul class="singleTask" >
-    <li ng-click="MoveTask(task)" ng-repeat="task in TaskService.toDo | filter:task.status=2 | orderBy:'title' ">
+    <div class="singleTask" ng-click="MoveTaskDone(task)" ng-repeat="task in TaskService.toDo | filter:task.status='__status__inProg__'">
       <h4 class="new_task_title">{{ task.title }}</h4>
       <p class"new_task_desc">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority">{{ "PRIORITY: " + task.priority }}</p>
       <p class"new_task_createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
       <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-    </li>
-  </ul>
+      <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
+
+  </div>
 </div>
 
 <div class="taskColumn">
   <div class="col-title">DONE</div>
-    <ul class="singleTask" ng-click="">
-    <li ng-click="MoveTask(task)" ng-repeat="task in TaskService.toDo | filter:task.status=3 | orderBy:'title'">
+    <div class="singleTask" ng-click="MoveTaskOut(task)" ng-repeat="task in TaskService.toDo | filter:task.status='__status__done__'">
       <h4 class="new_task_title">{{ task.title }}</h4>
       <p class"new_task_desc">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority">{{ "PRIORITY: " + task.priority }}</p>
       <p class"new_task_createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
       <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-    </li>
-  </ul>
+      <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
+
+  </div>
 </div>
