--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,16 @@
 
 body {
   background-color: gray;
-  margin: 0px; }
+  margin: 0px;
+  padding: 0px; }
+
+#navbar {
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0; }
 
 #main {
   margin: auto; }
@@ -14,7 +23,7 @@ body {
 
 .taskColumn {
   width: 31%;
-  min-height: 70vh;
+  min-height: 75vh;
   height: 100%;
   border: 1px solid white;
   float: left;
@@ -38,3 +47,6 @@ body {
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
+
+.new_task_title {
+  margin-top: 50px; }
