--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,8 @@ body {
 
 .singleTask {
   border: 1px solid white;
-  margin: 15px; }
+  margin: 15px;
+  padding: 10px; }
 
 .singleTask:hover {
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
