--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -27,6 +27,16 @@ body {
   background-color: gray;
   margin: 0px;
   padding: 0px;
+  font-family: Dosis;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: red;
 }
 
 #navbar {
@@ -38,8 +48,48 @@ body {
   left: 0;
 }
 
+.nav-home {
+  float: right;
+  background-color: orange;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 25px;
+  margin: 20px 10px;
+}
+
+.nav-addtask {
+  float: left;
+  background-color: orange;
+  width: 50px;
+  height: 50px;
+  line-height: 40px;
+  font-size: 50px;
+  text-align: center;
+  border-radius: 25px;
+  margin: 20px 10px;
+}
+
+.nav-login {
+  float: right;
+  background-color: orange;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 25px;
+  margin: 20px 10px;
+}
+
 #main {
   margin: auto;
+}
+
+.new-task-main {
+  margin-top: 100px;
 }
 
 #newTask {
@@ -51,9 +101,10 @@ body {
   width: 31%;
   min-height: 75vh;
   height: 100%;
-  border: 1px solid white;
+  border: 7px solid black;
   float: left;
-  margin: 10px;
+  margin: 99px 10px 20px 10px;
+
 }
 
 .col-title {
@@ -70,15 +121,18 @@ body {
 .singleTask {
   border: 1px solid white;
   margin: 15px;
-  padding: 10px;
-}
-
-.singleTask:hover {
+  padding: 0px 10px 10px 10px;
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
   box-shadow: 6px 7px 29px -2px rgba(0,0,0,0.75);
 }
 
-.new_task_title {
-  margin-top: 50px;
+.singleTask:hover {
+  -webkit-box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
+  box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
+}
+
+.formTask {
+  margin-top: 100px;
 }
