adds register and login route

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,3 +104,10 @@ a:hover {
 
 .formTask {
   margin-top: 100px; }
+
+.loginDiv {
+  margin-top: 100px;
+}
+.registerDiv {
+  margin-top: 100px;
+}
