--- a/public/views/default.html
+++ b/public/views/default.html
@@ -16,7 +16,7 @@
         <!-- </form> -->
 
         <button type="button" ng-click="deleteTask(task._id)">Delete</button>
-        <button type="button" ng-click="MoveTaskInProgress( )">>>></button>
+        <button type="button" ng-click="MoveTaskInProgress(task)">>>></button>
       </div>
 
   </div>
