--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,14 +1,14 @@
 <div class="registerDiv">
-  <form class="registerForm" ng-submit="">
+  <form class="registerForm" ng-submit="addNewUser()">
     <fieldset>
       <div class="userNameForm">
         <label for="userNameForm">Username</label>
-        <input id="userNameForm" type="text" ng-model="" />
+        <input id="userNameForm" type="text" ng-model="newUser.username" />
       </div>
 
       <div class="pwForm">
         <label for="pwForm">Password</label>
-        <input id="pwForm" type="text" ng-model="" />
+        <input id="pwForm" type="password" ng-model="newUser.password"/>
       </div>
 
       <div class="commit">
