Updates some page styling

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -6,12 +6,12 @@
 
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
 
-      <h2 class="new_task_title" editable-text="task.title">{{ task.title }}</h2>
-      <p class"new_task_desc" editable-text="task.desc">{{ "DESC: " + task.desc }}</p>
-      <p class"new_task_priority" editable-text="task.priority">{{ "PRIORITY: " + task.priority }}</p>
-      <p class"new_task_createBy" editable-text="task.createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
-      <p class"new_task_assignedTo" editable-text="task.assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-      <p class"new_task_status" editable-text="task.status">{{ "ASSIGNED TO: " + task.status }}</p>
+      <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
+      <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
+      <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
+      <p class"new_task_createBy" editable-text="task.createdBy" onbeforesave="updateTask(task)">{{ "CREATED BY: " + task.createdBy }}</p>
+      <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
+  <!--     <p class"new_task_status" editable-text="task.status" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.status }}</p> -->
 
       <div class="commit">
         <!-- <button type="button" ng-click="">Edit</button> -->
