--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,8 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis);
 @import url(https://fonts.googleapis.com/css?family=Lato);
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  transition : all 0.1s ease;}
 
 body {
   /*background-color: gray;*/
@@ -95,11 +96,17 @@ a:hover {
   border: 1px solid white;
   margin: 15px;
   padding: 0px 10px 10px 10px;
+  height: 70px;
+  overflow: hidden;
+  /*transition : all 0.25s ease;*/
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
 
 .singleTask:hover {
+  height: 100%;
+  /*transition : all 0.25s ease;*/
+  transition-timing-function: ease-in-out;
   -webkit-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
