--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,15 +1,41 @@
 <div class="registerDiv">
-  <form class="registerForm" ng-submit="addNewUser()">
+  <form class="registerForm" ng-submit="addNewUser(newUser)" ng-model="newUser">
     <fieldset>
+      <div class="firstnameForm">
+        <label for="nameForm">First Name</label>
+        <div class="inputBox">
+          <input id="nameForm" type="text" ng-model="newUser.firstName"/>
+        </div>
+      </div>
+
+      <div class="lastnameForm">
+        <label for="lastnameForm">Last Name</label>
+        <div class="inputBox">
+          <input id="lastnameForm" type="text" ng-model="newUser.lastName"/>
+        </div>
+      </div>
+
+      <div class="emailForm">
+        <label for="emailForm">Email</label>
+        <div class="inputBox">
+          <input id="emailForm" type="text" ng-model="newUser.email"/>
+        </div>
+      </div>
+
       <div class="userNameForm">
         <label for="userNameForm">Username</label>
-        <input id="userNameForm" type="text" ng-model="newUser.username" />
+        <div class="inputBox">
+          <input id="userNameForm" type="text" ng-model="newUser.username"/>
+        </div>
       </div>
 
       <div class="pwForm">
         <label for="pwForm">Password</label>
-        <input id="pwForm" type="password" ng-model="newUser.password"/>
+        <div class="inputBox">
+          <input id="pwForm" type="password" ng-model="newUser.password"/>
+        </div>
       </div>
+
 
       <div class="commit">
         <button type="submit">Register</button>
