--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,11 +5,10 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis);
 @import url(https://fonts.googleapis.com/css?family=Lato);
 * {
-  box-sizing: border-box;
-  transition : all 0.1s ease;}
+  box-sizing: border-box; }
 
 body {
-  /*background-color: gray;*/
+  background-color: gray;
   margin: 0px;
   padding: 0px;
   font-family: Dosis; }
@@ -73,7 +72,6 @@ a:hover {
   width: 100%; }
 
 .taskColumn {
-  background-color: gray;
   width: 31%;
   min-height: 75vh;
   height: 100%;
@@ -92,36 +90,17 @@ a:hover {
   font-family: Montserrat; }
 
 .singleTask {
-  background-color: white;
   border: 1px solid white;
   margin: 15px;
   padding: 0px 10px 10px 10px;
-  height: 70px;
-  overflow: hidden;
-  /*transition : all 0.25s ease;*/
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
 
 .singleTask:hover {
-  height: 100%;
-  /*transition : all 0.25s ease;*/
-  transition-timing-function: ease-in-out;
   -webkit-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
 
 .formTask {
   margin-top: 100px; }
-
-.delete-button {
-  float: right;
-  margin-top: 10px;
-}
-
-.loginDiv {
-  margin-top: 100px;
-}
-.registerDiv {
-  margin-top: 100px;
-}
