--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color: gray;
+  background-color: white;
   margin: 0px;
   padding: 0px;
   font-family: Dosis; }
@@ -72,6 +72,7 @@ a:hover {
   width: 100%; }
 
 .taskColumn {
+  background-color: lightgray;
   width: 31%;
   min-height: 75vh;
   height: 100%;
@@ -90,17 +91,31 @@ a:hover {
   font-family: Montserrat; }
 
 .singleTask {
+  background-color: #FCFBE3;
   border: 1px solid white;
+  overflow: hidden;
   margin: 15px;
+  height: 70px;
   padding: 0px 10px 10px 10px;
   -webkit-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
 
 .singleTask:hover {
+  height: 100%;
   -webkit-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
 
+.delete-button {
+  margin-top: 25px;
+  float: right; }
+
 .formTask {
+  margin-top: 100px; }
+
+.registerDiv {
+  margin-top: 100px; }
+
+.loginDiv {
   margin-top: 100px; }
