--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,19 +1,17 @@
 <div class="loginDiv">
-  <form class="loginForm" ng-submit="userLogin(username)">
+  <form class="loginForm" ng-submit="userLogin(user)">
     <fieldset>
       <div class="userNameForm">
         <label for="userNameForm">Username</label>
-        <input id="userNameForm" type="text" ng-model="userLogin.username" />
+        <input id="userNameForm" type="text" ng-model="user.username" />
       </div>
 
       <div class="pwForm">
         <label for="pwForm">Password</label>
-        <input id="pwForm" type="text" ng-model="userLogin.password" />
+        <input id="pwForm" type="password" ng-model="user.password" />
       </div>
 
-      <div class="commit">
-        <button type="submit">Login</button>
-      </div>
+      <button type="submit">Login</button>
     </fieldset>
   </form>
 </div>
