--- a/public/views/default.html
+++ b/public/views/default.html
@@ -9,14 +9,10 @@
       <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
       <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
-      <p class"new_task_createBy" editable-text="task.createdBy" onbeforesave="updateTask(task)">{{ "CREATED BY: " + task.createdBy }}</p>
+      <p class"new_task_createBy" editable-text="task.createdBy" onbeforesave="updateTask(task)">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
       <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-  <!--     <p class"new_task_status" editable-text="task.status" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.status }}</p> -->
 
-      <div class="commit">
-        <!-- <button type="button" ng-click="">Edit</button> -->
-        <button type="button" ng-click="MoveTaskInProgress(task)">>>></button>
-      </div>
+      <button type="button" ng-click="MoveTaskInProgress(task)">>>></button>
 
   </div>
 </div>
@@ -32,11 +28,8 @@
       <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
       <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
 
-      <div class="commit">
-        <button type="button" ng-click="MoveTaskToDo(task)"><<<</button>
-        <!-- <button type="button" ng-click="">Edit</button> -->
-        <button type="button" ng-click="MoveTaskDone(task)">>>></button>
-      </div>
+      <button type="button" ng-click="MoveTaskToDo(task)"><<<</button>
+      <button type="button" ng-click="MoveTaskDone(task)">>>></button>
   </div>
 </div>
 
@@ -51,9 +44,6 @@
       <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
       <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
 
-      <div class="commit">
-        <button type="button" ng-click="MoveTaskInProgress(task)"><<<</button>
-        <!-- <button type="button" ng-click="MoveTaskOut(task)">x</button> -->
-      </div>
+      <button type="button" ng-click="MoveTaskInProgress(task)"><<<</button>
   </div>
 </div>
