Added created by to be populated

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -9,8 +9,8 @@
       <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
       <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
-      <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
       <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
+      <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
 
       <button type="button" ng-click="MoveTaskInProgress(task)">>>></button>
 
@@ -21,12 +21,12 @@
   <div class="col-title">IN PROGRESS</div>
     <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__inProg__'">
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-      <h2 class="new_task_title">{{ task.title }}</h4>
-      <p class"new_task_desc">{{ "DESC: " + task.desc }}</p>
-      <p class"new_task_priority">{{ "PRIORITY: " + task.priority }}</p>
-      <p class"new_task_createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
-      <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-      <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
+
+      <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
+      <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
+      <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
+      <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
+      <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
 
       <button type="button" ng-click="MoveTaskToDo(task)"><<<</button>
       <button type="button" ng-click="MoveTaskDone(task)">>>></button>
@@ -37,12 +37,12 @@
   <div class="col-title">DONE</div>
     <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__done__'">
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-      <h2 class="new_task_title">{{ task.title }}</h4>
-      <p class"new_task_desc">{{ "DESC: " + task.desc }}</p>
-      <p class"new_task_priority">{{ "PRIORITY: " + task.priority }}</p>
-      <p class"new_task_createdBy">{{ "CREATED BY: " + task.createdBy }}</p>
-      <p class"new_task_assignedTo">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
-      <p class"new_task_status">{{ "STATUS: " + task.status }}</p>
+
+      <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
+      <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
+      <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
+      <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
+      <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
 
       <button type="button" ng-click="MoveTaskInProgress(task)"><<<</button>
   </div>
