--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@
 
 body {
   background-color: white;
+  background-image: url("/images/wood.png");
   margin: 0px;
   padding: 0px;
   font-family: Dosis; }
@@ -62,7 +63,8 @@ a:hover {
   margin: 20px 10px; }
 
 #main {
-  margin: auto; }
+  margin: auto;
+  background-color: red; }
 
 .new-task-main {
   margin-top: 100px; }
@@ -72,11 +74,10 @@ a:hover {
   width: 100%; }
 
 .taskColumn {
-  background-color: lightgray;
+  background: rgba(0, 0, 0, 0.6);
   width: 31%;
-  min-height: 75vh;
+  min-height: 80vh;
   height: 100%;
-  border: 7px solid black;
   float: left;
   margin: 99px 10px 20px 10px; }
 
@@ -108,7 +109,7 @@ a:hover {
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
 
 .delete-button {
-  margin-top: 25px;
+  margin-top: 15px;
   float: right; }
 
 .formTask {
