--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,27 +23,37 @@ a:hover {
 
 #navbar {
   width: 100%;
-  height: 100px;
-  background-color: black;
+  height: 60px;
+  background-color: #252C7E;
   position: absolute;
   top: 0;
-  left: 0; }
+  left: 0;
+  box-shadow: 6px 7px 29px -2px rgba(0, 0, 0, 0.75); }
 
 .nav-btn {
-  background-color: orange;
   width: 70px;
   height: 50px;
   line-height: 50px;
   font-size: 20px;
   text-align: center;
-  margin: 50px 5px 0px 5px;
+  margin: 10px 5px 0px 5px;
   bottom: 0; }
+
+.nav-btn:hover {
+  border-bottom: 3px solid #E9CE09; }
 
 .nav-home {
   float: right; }
 
 .nav-addtask {
-  float: left; }
+  background-color: #E9CE09;
+  float: left;
+  border-radius: 25px;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  margin-top: 0px;
+  margin-bottom: 5px; }
 
 .nav-login {
   float: right; }
@@ -53,6 +63,9 @@ a:hover {
 
 .new-task-main {
   margin-top: 100px; }
+
+#main-task-container {
+  background-color: red; }
 
 #newTask {
   border: 1px solid white;
@@ -64,17 +77,18 @@ a:hover {
   min-height: 80vh;
   height: 100%;
   float: left;
-  margin: 99px 10px 20px 10px; }
+  margin: 59px 10px 20px 10px; }
 
 .col-title {
-  background-color: black;
+  background-color: #252C7E;
   text-align: center;
   color: white;
   font-size: 20px;
   line-height: 40px;
   width: 100%;
   height: 40px;
-  font-family: Montserrat; }
+  font-family: Montserrat;
+  border-bottom: 5px solid #B10000; }
 
 .singleTask {
   background-color: #FCFBE3;
