--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,7 +1,8 @@
-<!-- <h1>YES WE CANBAN</h1> -->
 
-<div class="taskColumn">
-  <div class="col-title">TO DO</div>
+<div id="main-task-container">
+  <div class="taskColumn">
+    <div class="col-title">TO DO</div>
+
     <div class="singleTask control-group" ng-repeat="task in tasksArray | filter:task.status='__status__toDo__'">
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
       <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
@@ -10,12 +11,14 @@
       <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
       <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
       <button type="button" ng-click="MoveTaskInProgress(task)">>>></button>
+    </div>
+
   </div>
-</div>
 
 
-<div class="taskColumn">
-  <div class="col-title">IN PROGRESS</div>
+  <div class="taskColumn">
+    <div class="col-title">IN PROGRESS</div>
+
     <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__inProg__'">
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
       <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
@@ -23,17 +26,19 @@
       <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
       <p class"new_task_assignedTo" editable-text="task.assignedTo" onbeforesave="updateTask(task)">{{ "ASSIGNED TO: " + task.assignedTo }}</p>
       <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
+
       <button type="button" ng-click="MoveTaskToDo(task)"><<<</button>
       <button type="button" ng-click="MoveTaskDone(task)">>>></button>
+    </div>
+
   </div>
-</div>
 
 
-<div class="taskColumn">
-  <div class="col-title">DONE</div>
+  <div class="taskColumn">
+    <div class="col-title">DONE</div>
+
     <div class="singleTask" ng-repeat="task in tasksArray | filter:task.status='__status__done__'">
       <button type="button" ng-click="deleteTask(task._id)" class="delete-button">x</button>
-
       <h2 class="new_task_title" editable-text="task.title" onbeforesave="updateTask(task)">{{ task.title }}</h2>
       <p class"new_task_desc" editable-text="task.desc" onbeforesave="updateTask(task)">{{ "DESC: " + task.desc }}</p>
       <p class"new_task_priority" editable-text="task.priority" onbeforesave="updateTask(task)">{{ "PRIORITY: " + task.priority }}</p>
@@ -41,5 +46,7 @@
       <p class"new_task_createBy">{{ "CREATED BY: " + task.createdBy.firstName }}</p>
 
       <button type="button" ng-click="MoveTaskInProgress(task)"><<<</button>
+    </div>
+
   </div>
 </div>
