--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,6 @@ a:hover {
 #navbar {
   width: 100%;
   height: 100px;
-  background-color: black;
   position: absolute;
   top: 0;
   left: 0; }
@@ -97,9 +96,6 @@ a:hover {
   margin-top: 15px;
   float: right; }
 
-.formTask {
-  margin-top: 100px; }
-
 .registerDiv {
   margin-top: 100px; }
 
@@ -108,3 +104,17 @@ a:hover {
 
 .notfound {
   margin-top: 100px; }
+
+.new-task-main {
+  padding: 10%; }
+
+.btn-group {
+  margin: 10px; }
+
+.group_block {
+  background-color: purple;
+  flex-flow: row no wrap; }
+
+#task_form_block {
+  background-color: green;
+  width: 100%; }
