--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -43,7 +43,7 @@ a:hover {
 #navbar {
   width: 100%;
   height: 100px;
-  background-color: black;
+  // background-color: black;
   position: absolute;
   top: 0;
   left: 0;
@@ -131,10 +131,6 @@ a:hover {
   float: right;
 }
 
-.formTask {
-  margin-top: 100px;
-}
-
 .registerDiv {
   margin-top: 100px;
 }
@@ -147,6 +143,31 @@ a:hover {
   margin-top: 100px;
 }
 
+//============= task block ==============
+
+.formTask {
+  // margin-left: 80px;
+}
+
+.new-task-main {
+  padding: 10%;
+}
+
+.btn-group {
+  margin: 10px;
+}
+
+
+.group_block {
+  background-color: purple;
+  flex-flow: row no wrap;
+}
+
+#task_form_block {
+  background-color: green;
+  width: 100%;
+
+}
 
 
 // article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
