installed nodemon gulp livereload dependencies

--- a/public/views/tasks.html
+++ b/public/views/tasks.html
@@ -1,7 +1,5 @@
 
   <div class="new-task-main" ng-submit="addTask()">
-
-    <!-- <div class="group_block"> -->
      <div class="btn-group">
        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          New Group
@@ -13,7 +11,7 @@
                <label for="new_group_name">Name of Group</label>
                <div><input type="text" id="new_group_name" ng-model="new_task_group"></div>
              </div>
-            <button type="submit">Create!</button>
+            <button id="createBtn" type="submit">Create!</button>
            </fieldset>
          </form>
        </div>
@@ -24,14 +22,13 @@
          Join Group
        </button>
        <div class="dropdown-menu">
-         <a class="dropdown-item" href="#">Join Group</a>
-         <a class="dropdown-item" href="#">Another action</a>
-         <a class="dropdown-item" href="#">Something else here</a>
-         <div class="dropdown-divider"></div>
-         <a class="dropdown-item" href="#">Separated link</a>
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
        </div>
      </div>
-    <!-- </div> -->
 
   <div id="task_form_block">
     <form class="formTask">
