--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,5 +131,15 @@ a:hover {
   flex-flow: row no wrap; }
 
 #task_form_block {
-  background-color: green;
+  background-color: green; }
+
+.groupForm {
+  padding: 10px;
+  height: 100px;
+  width: 300px; }
+
+#new_group_name {
   width: 100%; }
+
+#createBtn {
+  margin-top: 8px; }
